--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,15 @@ header {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: rgb(128, 24, 24);
     color: white;
-    box-shadow: 0px 5px 5px rgb(69, 69, 69); 
+    box-shadow: 0px 5px 5px rgb(69, 69, 69);
+    border-bottom-left-radius: 10px; 
+    border-bottom-right-radius: 10px;
 }
 
 header h1 {
     font-size: 300%;
     font-style: italic;
+    text-shadow: 2px 2px rgb(69, 69, 69);
 }
 
 header nav {
@@ -44,7 +47,6 @@ a {
 
 p {
     font-size: 16px;
-    text-align: center;
 }
 
 section { 
@@ -52,32 +54,67 @@ section {
     display: block;
 }
 
-section div {
+section .categories {
     margin: 20px;
-    padding: 50px;
-    height: 300px;
+    padding: 20px;
+    height: 350px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
     background-color:rgb(179, 66, 66);
     color: #ffffff;
     border: black;
     border-style: solid;
     box-shadow: 10px 5px 5px rgb(69, 69, 69);
+    border-radius: 10px;
 }
 
 section h2 { 
     font-size: 150%;
+    line-height: 150%;
     text-align: center;
     text-decoration: underline;
+}
+
+section p {
+    margin: 50px;
+}
+
+section img {
+    max-height: 200px;
+    border-radius: 25px;
+    margin-left: 5px;
+    margin-top: 5px;
+    border: black;
+    border-style: solid;
+    border-width: 2px;
+}
+
+section figcaption {
+text-align: center;
+}
+
+
+section img:hover {
+    box-shadow: 5px 5px 5px rgb(69, 69, 69);
+    margin-left: 0px;
+    margin-top: 0px;
 }
 
 footer { 
     padding: 30px;
     clear: both;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     text-align: center;
 }
 
 footer h2 {
     font-size: 20px;
 }
+
+.project-links {
+    display: flex;
+    justify-content: space-around;
+}
+
+
 
