--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,16 +5,16 @@
 }
 
 body {
-    background-color:antiquewhite
+    background-color: antiquewhite;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
+    display: inline-block;
+    width: 100%;
     padding: 20px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    background-color: rgb(128, 24, 24);
-    color: white;
+    background-color: rgb(100, 0, 0);
+    color: rgb(255, 255, 255);
     box-shadow: 0px 5px 5px rgb(69, 69, 69);
     border-bottom-left-radius: 10px; 
     border-bottom-right-radius: 10px;
@@ -54,29 +54,33 @@ section {
     display: block;
 }
 
+section h2 { 
+    font-size: 300%;
+    line-height: 150%;
+    border-bottom-style: solid;
+    color: black;
+}
+
+section p {
+    margin: 50px;
+}
+
 section .categories {
     margin: 20px;
     padding: 20px;
     height: 350px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    background-color:rgb(179, 66, 66);
+    background-color:rgb(163, 24, 24);
     color: #ffffff;
-    border: black;
-    border-style: solid;
     box-shadow: 10px 5px 5px rgb(69, 69, 69);
     border-radius: 10px;
 }
 
-section h2 { 
-    font-size: 150%;
-    line-height: 150%;
-    text-align: center;
-    text-decoration: underline;
-}
-
-section p {
-    margin: 50px;
+.project-links {
+    display: flex;
+    justify-content: space-around; 
+    margin: 20px;
 }
 
 section img {
@@ -84,20 +88,17 @@ section img {
     border-radius: 25px;
     margin-left: 5px;
     margin-top: 5px;
-    border: black;
-    border-style: solid;
-    border-width: 2px;
-}
-
-section figcaption {
-text-align: center;
-}
-
+    border: 1px solid #ddd; 
+    border-radius: 4px;  
+    padding: 5px; 
+    max-height: 150px; 
+    }
 
 section img:hover {
     box-shadow: 5px 5px 5px rgb(69, 69, 69);
     margin-left: 0px;
     margin-top: 0px;
+    margin-bottom: 5px;
 }
 
 footer { 
@@ -109,11 +110,6 @@ footer {
 
 footer h2 {
     font-size: 20px;
-}
-
-.project-links {
-    display: flex;
-    justify-content: space-around;
 }
 
 
