--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,12 @@ header nav li {
     margin-left: 25px;
 }
 
+/*creates flex wrap to accomadate for smaller screens*/
+.content-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 /*sets size and display of main section*/
 section { 
     width: 75%;
@@ -94,14 +100,13 @@ section p {
 
 /*sets size and display of 'self' image in about me section*/
 #about-me img {
-    max-height: 100px;
-    border-style: hidden;
-    border-radius: 10px;
+    max-height: 115px;
     float: left;
     clear: both;
-    margin: 20px;
+    margin: 10px;
     border-radius: 50%;
     border: 1px solid black;
+    box-shadow: 2px 2px 2px rgb(69, 69, 69);
 }
 
 /*sets margin and border for images in 'works' category*/
@@ -123,6 +128,7 @@ section p {
 /*sets display and margin for 'html/css refactor' portion*/
 #first-project {
     display: block;
+    flex-shrink: 0;
     margin: 10px;
 }
 
@@ -134,7 +140,7 @@ section p {
 /*creates flex display for remaining project links*/
 .project-links {
     display: flex;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     margin: 10px;
 }
 
@@ -150,12 +156,12 @@ aside {
     text-align: center;
     clear: both;
     float: right;
-    width: 20%;
+    width: 15rem;
 }
 
 /*sets size and border of images in 'aside'*/
 aside img {
-    max-height: 100px;
+    max-height: 75px;
     margin-top: 50px;
     border-style: hidden;
     border-radius: 10px;
@@ -167,7 +173,3 @@ footer {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
 }
-
-
-
-
